Artículo y carta revisados

--- a/Bibliography/bib_julia2.bib
+++ b/Bibliography/bib_julia2.bib
@@ -6090,3 +6090,16 @@ svmtutorialBURGES1999
 	doi      = {10.1109/MGRS.2020.3004508},
 	groups   = {Journal Article},
 }
+
+@Article{LowCostRobustEstimationfortheSingleLookGI0ModelUsingtheParetoDistributioninpress,
+	author   = {D. Chan and A. Rey and J. Gambini and A. C. Frery},
+	journal  = {IEEE Geoscience and Remote Sensing Letters},
+	title    = {Low-Cost Robust Estimation for the Single-Look {GI0} Model Using the {P}areto Distribution},
+	year     = {2020},
+	number   = {11},
+	pages    = {1879--1883},
+	volume   = {17},
+	abstract = {The statistical properties of Synthetic Aperture Radar (SAR) image texture reveal useful target characteristics. It is well-known that these images are affected by speckle and prone to extreme values due to double bounce and corner reflector. The G0I distribution is flexible enough to model different degrees of texture in speckled data. It is indexed by three parameters: alpha, related to the texture, gamma, a scale parameter, and L, the number of looks. Quality estimation of alpha is essential due to its immediate interpretability. In this letter, we exploit the connection between the G0I and Pareto distributions. With this, we obtain six estimators that have not been previously used in the SAR literature. We compare their behavior with others in the noisiest case for monopolarized intensity data, namely single look case. We evaluate them using Monte Carlo methods for noncontaminated and contaminated data, considering convergence rate, bias, mean squared error, and computational time. We conclude that two of these estimators based on the Pareto law are the safest choices when dealing with actual data and small samples, as is the case of despeckling techniques and segmentation, to name just two applications. We verify the results with an actual SAR image.},
+	doi      = {10.1109/LGRS.2019.2956635},
+	groups   = {Journal Article},
+}
